--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Author URL: http://w3layouts.com
                     <ul class="navbar-nav search-right mt-lg-0 mt-2">
                         <li class="nav-item" title="Search"><a href="#search" class="search-search">
                                 <span class="fas fa-search" aria-hidden="true"></span></a></li>
-                        <li class="nav-item me-lg-3"><a href="" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Get Started</a></li>
+                        <li class="nav-item me-lg-3"><a href="services.html" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Get Started</a></li>
                     </ul>
 
                     <!-- //toggle switch for light and dark theme -->
@@ -85,7 +85,7 @@ Author URL: http://w3layouts.com
                     <h3 class="mb-4 title">Digital Presence</h3>
                     <p class="w3banr-p">We help shop owners and local businesses build their digital presence, run targeted ads, and boost sales instantly in their region.</p>
                     <div class="w3l-buttons mt-sm-5 mt-4">
-                        <a class="btn btn-outline-primary btn-style " href="contact.html"> Get Started </a>
+                        <a class="btn btn-outline-primary btn-style " href="services.html"> Get Started </a>
                     </div>
                 </div>
                 <div class="col-lg-6 w3l-slider-right-info mt-lg-0 mt-5 ps-lg-5 align-items-center">
@@ -290,7 +290,7 @@ Author URL: http://w3layouts.com
 Whether you’re ready to grow your business online or just exploring ideas, our team is here to guide you.
  Let’s connect today and start building your success story.</p>
                         <div class="w3l-two-buttons">
-                            <a href="#view" class="btn btn-style btn-white mt-lg-5 mt-4 ms-2"> Contact Us</a>
+                            <a href="services.html" class="btn btn-style btn-white mt-lg-5 mt-4 ms-2"> Contact Us</a>
                         </div>
                     </div>
                     
@@ -449,7 +449,7 @@ function openGmail(event) {
 
                         </p>
                         <div class="w3l-two-buttons mt-4">
-                            <a href="#trail" class="btn btn-primary btn-style"> Get Started </a>
+                            <a href="services.html" class="btn btn-primary btn-style"> Get Started </a>
                         </div>
                         <div class="main-social-footer-29 mt-5">
                             <a href="https://www.instagram.com/pieoto/" class="instagram"><span class="fab fa-instagram"></span></a>
