--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@ Author URL: http://w3layouts.com
                     <ul class="navbar-nav search-right mt-lg-0 mt-2">
                         <li class="nav-item" title="Search"><a href="#search" class="search-search">
                                 <span class="fas fa-search" aria-hidden="true"></span></a></li>
-                        <li class="nav-item me-lg-3"><a href="" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Get Started</a></li>
+                        <li class="nav-item me-lg-3"><a href="services.html" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Get Started</a></li>
                     </ul>
 
                     <!-- //toggle switch for light and dark theme -->
@@ -207,7 +207,7 @@ Author URL: http://w3layouts.com
 
                         </p>
                         <div class="w3l-two-buttons mt-4">
-                            <a href="#trail" class="btn btn-primary btn-style"> Get Started </a>
+                            <a href="services.html" class="btn btn-primary btn-style"> Get Started </a>
                         </div>
                         <div class="main-social-footer-29 mt-5">
                             <a href="https://www.instagram.com/pieoto/" class="instagram"><span class="fab fa-instagram"></span></a>
@@ -306,3 +306,4 @@ Author URL: http://w3layouts.com
 </body>
 
 </html>
+
