--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@ Author URL: http://w3layouts.com
                     <ul class="navbar-nav search-right mt-lg-0 mt-2">
                         <li class="nav-item" title="Search"><a href="#search" class="search-search">
                                 <span class="fas fa-search" aria-hidden="true"></span></a></li>
-                        <li class="nav-item me-lg-3"><a href="" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Get Started</a></li>
+                        <li class="nav-item me-lg-3"><a href="services.html" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Get Started</a></li>
                     </ul>
 
                     <!-- //toggle switch for light and dark theme -->
@@ -109,8 +109,7 @@ Author URL: http://w3layouts.com
 
                         <h4 class="title"><a href="#">Email Marketing</a></h4>
                         <p>
-                            Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel.
-                        </p>
+Engage your audience with impactful email campaigns that build trust, drive conversions, and grow lasting relationships.                        </p>
                     </div>
                 </div>
 
@@ -120,8 +119,7 @@ Author URL: http://w3layouts.com
 
                         <h4 class="title"><a href="#">Market Research</a></h4>
                         <p>
-                            Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel.
-                        </p>
+Gain valuable insights into your audience and industry to make smarter, data-driven business decisions.                        </p>
                     </div>
                 </div>
 
@@ -130,8 +128,7 @@ Author URL: http://w3layouts.com
                         <div class="icon"><i class="fas fa-chalkboard-teacher"></i></div>
                         <h4 class="title"><a href="#">Online Marketing</a></h4>
                         <p>
-                            Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel.
-                        </p>
+Boost your brand’s visibility online with strategies that attract, engage, and convert.                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-md-0 mt-3">
@@ -140,8 +137,7 @@ Author URL: http://w3layouts.com
 
                         <h4 class="title"><a href="#">Web Development</a></h4>
                         <p>
-                            Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel.
-                        </p>
+Build fast, responsive, and user-friendly websites designed to elevate your brand online.                        </p>
                     </div>
                 </div>
 
@@ -151,8 +147,7 @@ Author URL: http://w3layouts.com
 
                         <h4 class="title"><a href="#">Keyword Research</a></h4>
                         <p>
-                            Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel.
-                        </p>
+Unlock the right keywords to boost visibility, reach your audience, and rank higher.                        </p>
                     </div>
                 </div>
 
@@ -161,8 +156,7 @@ Author URL: http://w3layouts.com
                         <div class="icon"><i class="fas fa-sitemap"></i></div>
                         <h4 class="title"><a href="#">Optimization</a></h4>
                         <p>
-                            Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel.
-                        </p>
+Maximize performance with smart optimization that enhances speed, reach, and user experience.                        </p>
                     </div>
                 </div>
             </div>
@@ -172,58 +166,50 @@ Author URL: http://w3layouts.com
 
 
 
-<section class="text-gray-600 body-font relative"> 
-  <div class="container px-5 py-24 mx-auto">
-    <div class="flex flex-col text-center w-full mb-12">
-      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Contact Us</h1>
-      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Submit Your Requirements :-</p>
-    </div>
-    <div class="lg:w-1/2 md:w-2/3 mx-auto">
-      <form id="contactForm" onsubmit="sendEmail(event)">
-        <div class="flex flex-wrap -m-2">
-          <div class="p-2 w-1/2">
-            <div class="relative">
-              <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
-              <input type="text" id="name" name="name" required 
-                class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 
-                focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 
-                text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors 
-                duration-200 ease-in-out">
-            </div>
-          </div>
-          <div class="p-2 w-1/2">
-            <div class="relative">
-              <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
-              <input type="email" id="email" name="email" required
-                class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 
-                focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 
-                text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors 
-                duration-200 ease-in-out">
-            </div>
-          </div>
-          <div class="p-2 w-full">
-            <div class="relative">
-              <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
-              <textarea id="message" name="message" required
-                class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 
-                focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 
-                h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 
-                transition-colors duration-200 ease-in-out"></textarea>
-            </div>
-          </div>
-          <div class="p-2 w-full">
-           <button type="submit"
-  class="flex mx-auto text-white bg-black border-0 py-2 px-8 
-  focus:outline-none hover:bg-gray-800 rounded text-lg">
-  Submit
-</button>
 
+     <div class="title-content mb-5 text-center">
+                <h3 class="title-w3l mb-4">Brands We Work With</h3>
+            </div>
+
+<section class="text-gray-600 body-font">
+  <div class="container px-5 py-12 mx-auto"> <!-- changed py-24 to py-12 -->
+    <div class="flex flex-wrap -m-4">
+      <div class="p-4 md:w-1/3">
+       
+      </div>
+      <div class="p-4 md:w-1/3">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="assets/images/facecardslogofull.jpg" alt="blog">
+          <div class="p-6">
+            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">MODELING AGENCY</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Facecards.in</h1>
+            <p class="leading-relaxed mb-3">Crafted a responsive and user-friendly website (facecards.in) for Facecards.in, enhancing their digital presence and brand reach.</p>
           </div>
         </div>
-      </form>
+      </div>
+      <div class="p-4 md:w-1/3">
+        
+      </div>
     </div>
   </div>
 </section>
+
+
+
+<section class="text-gray-600 body-font">
+  <div class="container px-5 py-24 mx-auto">
+    <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
+      <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900">Boost your business with Pieoto’s smart digital solutions—designed to grow your brand and reach more customers.</h1>
+<button class="flex-shrink-0 text-white border-0 py-2 px-8 focus:outline-none rounded text-lg mt-10 sm:mt-0" 
+        style="background-color:#0052ac;">
+  Share Your Business Info
+</button>
+
+    </div>
+  </div>
+</section>
+
+
 
 <script>
 function sendEmail(event) {
@@ -264,7 +250,7 @@ function sendEmail(event) {
 
                         </p>
                         <div class="w3l-two-buttons mt-4">
-                            <a href="#trail" class="btn btn-primary btn-style"> Get Started </a>
+                            <a href="services.html" class="btn btn-primary btn-style"> Get Started </a>
                         </div>
                         <div class="main-social-footer-29 mt-5">
                             <a href="https://www.instagram.com/pieoto/" class="instagram"><span class="fab fa-instagram"></span></a>
@@ -363,3 +349,4 @@ function sendEmail(event) {
 </body>
 
 </html>
+
