--- a/about.html
+++ b/about.html
@@ -118,15 +118,16 @@ Driven by passion and guided by innovation, our goal is simple: to help business
 
 
 <section class="text-gray-600 body-font">
-  <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
-    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded-full" alt="hero" src="assets/images/IMG_20250902_131039-removebg-preview.png">
+  <div class="container mx-auto flex px-5 py-6 items-center justify-center flex-col"> <!-- reduced py-12 to py-6 -->
+    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded-full" alt="hero" src="assets/images/ankitphoto.jpg">
     <div class="text-center lg:w-2/3 w-full">
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Founder & CEO ~ Ankit Gupta</h1>
-      <p class="mb-8 leading-relaxed text-black"> Ankit Gupta is the visionary founder and CEO of Pieoto, a creative digital solutions company dedicated to helping businesses grow online. With a passion for design, marketing, and innovation, he built Pieoto to empower brands with strategies that blend creativity and technology. Ankit believes in turning ideas into impactful digital experiences that drive growth and inspire success.</p>
-      
+      <p class="mb-8 leading-relaxed text-black">Hi, I’m Ankit Gupta, founder of Pieoto. I started Pieoto with a passion for creativity and a vision to empower brands through design and innovation. My mission is simple—help businesses, from startups to established enterprises, connect meaningfully with their audiences. With a strong focus on originality and supporting small businesses, I lead Pieoto with curiosity, dedication, and the belief that every brand has the potential to shine brighter.</p>
     </div>
   </div>
 </section>
+
+
 
 
 
