--- a/services.html
+++ b/services.html
@@ -201,14 +201,18 @@ Maximize performance with smart optimization that enhances speed, reach, and use
     <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
       <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900">Boost your business with Pieoto’s smart digital solutions—designed to grow your brand and reach more customers.</h1>
 <button class="flex-shrink-0 text-white border-0 py-2 px-8 focus:outline-none rounded text-lg mt-10 sm:mt-0" 
-        style="background-color:#0052ac;">
+        style="background-color:#0052ac;"
+        onclick="window.location.href='https://mail.google.com/mail/?view=cm&fs=1&to=pieoto.official@gmail.com';">
   Share Your Business Info
 </button>
 
+
+    
     </div>
   </div>
 </section>
 
+    
 
 
 <script>
