--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@ Author URL: http://w3layouts.com
 <html lang="en">
 
 <head>
-   
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5NJC9BR02N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5NJC9BR02N');
+</script>
+   <!-- Favicon -->
+<link rel="icon" type="image/png" href="assets/images/Copy_of_Pieotologo-removebg-preview.png">
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,6 +26,8 @@ Author URL: http://w3layouts.com
     <link href="//fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,400;1,600&display=swap" rel="stylesheet">
     <!--//google-fonts -->
     <!-- Template CSS -->
+               <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/style-starter.css">
 </head>
 
@@ -386,6 +399,40 @@ With Pieoto, your brand will glow.</q>
         <!-- //grids -->
     </section>
     <!-- //testimonials -->
+
+
+
+
+
+<div class="title-content mb-5 text-center" style="margin-top: 80px;">
+  <h3 class="title-w3l mb-4">Our Clients:-</h3>
+</div>
+
+<section class="text-gray-600 body-font">
+  <div class="container px-5 py-12 mx-auto"> <!-- changed py-24 to py-12 -->
+    <div class="flex flex-wrap -m-4">
+      <div class="p-4 md:w-1/3">
+       
+      </div>
+      <div class="p-4 md:w-1/3">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="assets/images/facecardslogofull.jpg" alt="blog">
+          <div class="p-6">
+            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">MODELING AGENCY</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Facecards.in</h1>
+            <p class="leading-relaxed mb-3">Crafted a responsive and user-friendly website (facecards.in) for Facecards.in, enhancing their digital presence and brand reach.</p>
+          </div>
+        </div>
+      </div>
+      <div class="p-4 md:w-1/3">
+        
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
     <!--/w3l-project-->
     <section class="w3l-project-main">
   <div class="container">
@@ -432,6 +479,14 @@ function openGmail(event) {
 </script>
 
     <!--//w3l-project-->
+
+
+
+
+
+
+
+
     <!-- footer -->
     <section class="w3l-footer-29-main">
         <div class="footer-29 py-5">
