--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,17 @@ Author URL: http://w3layouts.com
 <html lang="en">
 
 <head>
-   
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5NJC9BR02N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5NJC9BR02N');
+</script>
+   <link rel="icon" type="image/png" href="assets/images/Copy_of_Pieotologo-removebg-preview.png">
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -120,7 +130,7 @@ Author URL: http://w3layouts.com
                                 </div>
                                 <div class="cont-right">
                                     <h5>Send Email</h5>
-                                    <p><a href="mailto:pieoto.official@mail.com" class="mail">pieoto.official@mail.com</a></p>
+                                    <p><a href="mailto:pieoto.official@mail.com" class="mail">pieoto.official@gmail.com</a></p>
                                 </div>
                             </div>
                             
@@ -146,7 +156,7 @@ Author URL: http://w3layouts.com
                 <div class="header-sec text-center mb-5">
                     <h6 class="title-subhny mb-2">Write Us</h6>
                     <h3 class="title-w3l">
-                        Don't hesitate to contact us <br> anytime with questions
+                        Got questions? We’re just a message <br> away—reach out anytime!
                     </h3>
                 </div>
                 <div class="contactct-fm map-content-9">
