--- a/about.html
+++ b/about.html
@@ -6,7 +6,17 @@ Author URL: http://w3layouts.com
 <html lang="en">
 
 <head>
-   
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5NJC9BR02N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5NJC9BR02N');
+</script>
+   <link rel="icon" type="image/png" href="assets/images/Copy_of_Pieotologo-removebg-preview.png">
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
