--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@ Author URL: http://w3layouts.com
 <html lang="en">
 
 <head>
+    <!-- Primary Meta Tags -->
+<title>Pieoto | Creative Digital Solutions for Businesses</title>
+<meta name="title" content="Pieoto | Creative Digital Solutions for Businesses">
+<meta name="description" content="Pieoto helps businesses grow with creative design, strategy, and digital solutions. Explore our services to make your brand stand out.">
+
+<!-- Keywords (optional but useful) -->
+<meta name="keywords" content="Pieoto, Pieoto website, Pieoto digital solutions, Pieoto design, Pieoto India, creative brand Pieoto">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://pieoto.com/">
+<meta property="og:title" content="Pieoto | Creative Digital Solutions for Businesses">
+<meta property="og:description" content="Pieoto helps businesses grow with creative design, strategy, and digital solutions.">
+<meta property="og:image" content="https://pieoto.com/assets/images/Copy_of_Pieotologo-removebg-preview">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://pieoto.com/">
+<meta property="twitter:title" content="Pieoto | Creative Digital Solutions for Businesses">
+<meta property="twitter:description" content="Pieoto helps businesses grow with creative design, strategy, and digital solutions.">
+<meta property="twitter:image" content="https://pieoto.com/assets/images/Copy_of_Pieotologo-removebg-preview">
+
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5NJC9BR02N"></script>
 <script>
