--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Author URL: http://w3layouts.com
 <meta name="description" content="Pieoto helps businesses grow with creative design, strategy, and digital solutions. Explore our services to make your brand stand out.">
 
 <!-- Keywords (optional but useful) -->
-<meta name="keywords" content="Pieoto, Pieoto website, Pieoto digital solutions, Pieoto design, Pieoto India, creative brand Pieoto">
+<meta name="keywords" content="Pieoto, Pieoto website, Pieoto digital solutions, Pieoto design, Pieoto India, creative brand Pieoto, local business growth strategies, how to promote local business online, boost local shop sales, small business marketing tips, grow your shop digitally, digital marketing for local businesses, online visibility for shops, increase foot traffic to local stores, customer acquisition for local businesses, business directory for shop owners, attract more customers locally, build strong local presence online, shop promotion ideas, grow small business in India, affordable marketing for shops, online business presence for retailers, community marketing strategies, increase sales for local business, best ways to grow shop revenue, local store advertising ideas, reach more customers online, grow your local business with digital tools, shop owner marketing plan, small business growth hacks, local business promotion platform, improve customer loyalty for local stores, shop growth strategies, local SEO for small business, business listing benefits for shops, and simple ways to expand local shop customers">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
@@ -119,9 +119,12 @@ Author URL: http://w3layouts.com
                     <h3 class="mb-2 title"> <span>For</span> Your </h3>
                     <h3 class="mb-4 title">Digital Presence</h3>
                     <p class="w3banr-p">We help shop owners and local businesses build their digital presence, run targeted ads, and boost sales instantly in their region.</p>
-                    <div class="w3l-buttons mt-sm-5 mt-4">
-                        <a class="btn btn-outline-primary btn-style " href="services.html"> Get Started </a>
-                    </div>
+                    <div class="w3l-buttons mt-sm-5 mt-4 d-flex gap-3">
+                          <a class="btn btn-outline-primary btn-style" href="shoplisting.html">Get Started For Businesses</a>
+
+  <a class="btn btn-outline-primary btn-style" href="services.html">Get Started For Brands</a>
+</div>
+
                 </div>
                 <div class="col-lg-6 w3l-slider-right-info mt-lg-0 mt-5 ps-lg-5 align-items-center">
                     <div class="w3l-main-slider banner-slider">
