--- a/index.html
+++ b/index.html
@@ -119,12 +119,9 @@ Author URL: http://w3layouts.com
                     <h3 class="mb-2 title"> <span>For</span> Your </h3>
                     <h3 class="mb-4 title">Digital Presence</h3>
                     <p class="w3banr-p">We help shop owners and local businesses build their digital presence, run targeted ads, and boost sales instantly in their region.</p>
-                    <div class="w3l-buttons mt-sm-5 mt-4 d-flex gap-3">
-                          <a class="btn btn-outline-primary btn-style" href="shoplisting.html">Get Started For Businesses</a>
-
-  <a class="btn btn-outline-primary btn-style" href="services.html">Get Started For Brands</a>
-</div>
-
+                    <div class="w3l-buttons mt-sm-5 mt-4">
+                        <a class="btn btn-outline-primary btn-style " href="services.html"> Get Started </a>
+                    </div>
                 </div>
                 <div class="col-lg-6 w3l-slider-right-info mt-lg-0 mt-5 ps-lg-5 align-items-center">
                     <div class="w3l-main-slider banner-slider">
@@ -649,5 +646,4 @@ function openGmail(event) {
 </body>
 
 </html>
-
 
