--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ Author URL: http://w3layouts.com
         <div class="container">
             <div class="row align-items-center w3l-slider-grids">
                 <div class="col-lg-6 w3l-slider-left-info pe-lg-5">
-                    <h6 class="title-subhny mb-2">We are gathered</h6>
+					<h6 class="title-subhny mb-2" style="color: black;">We are gathered</h6>
+
                     <h3 class="mb-2 title"> <span>For</span> Your </h3>
                     <h3 class="mb-4 title">Digital Presence</h3>
                     <p class="w3banr-p">We help shop owners and local businesses build their digital presence, run targeted ads, and boost sales instantly in their region.</p>
@@ -646,4 +647,5 @@ function openGmail(event) {
 </body>
 
 </html>
+
 
