--- a/index.html
+++ b/index.html
@@ -441,8 +441,9 @@ With Pieoto, your brand will glow.</q>
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
           <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="assets/images/facecardslogofull.jpg" alt="blog">
           <div class="p-6">
-            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">MODELING AGENCY</h2>
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Facecards.in</h1>
+          <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">MODELING AGENCY</h2>
+
+          <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Facecards.in</h1>
             <p class="leading-relaxed mb-3">Crafted a responsive and user-friendly website (facecards.in) for Facecards.in, enhancing their digital presence and brand reach.</p>
           </div>
         </div>
@@ -647,5 +648,6 @@ function openGmail(event) {
 </body>
 
 </html>
+
 
 
