--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ Author URL: http://w3layouts.com
   gtag('config', 'G-5NJC9BR02N');
 </script>
    <!-- Favicon -->
-<link rel="icon" type="image/png" href="assets/images/Copy_of_Pieotologo-removebg-preview.png">
+<link rel="icon" type="image/png" href="assets/images/Pieotologo (1) (1).png">
+
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -648,6 +649,7 @@ function openGmail(event) {
 </body>
 
 </html>
+
 
 
 
