--- a/index.html
+++ b/index.html
@@ -456,6 +456,29 @@ With Pieoto, your brand will glow.</q>
   </div>
 </section>
 
+<section class="text-gray-600 body-font">
+  <div class="container px-5 py-12 mx-auto"> <!-- changed py-24 to py-12 -->
+    <div class="flex flex-wrap -m-4">
+      <div class="p-4 md:w-1/3">
+       
+      </div>
+      <div class="p-4 md:w-1/3">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="assets/images/logosalon.jpg" alt="blog">
+          <div class="p-6">
+          <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">SALON</h2>
+
+          <h1 class="title-font text-lg font-medium text-gray-900 mb-3">streetssalonbydeepti.com</h1>
+            <p class="leading-relaxed mb-3">Built a professional, mobile-friendly website for Streetssalonbydeepti.com, elevating their online brand and streamlining customer interaction and bookings.</p>
+          </div>
+        </div>
+      </div>
+      <div class="p-4 md:w-1/3">
+        
+      </div>
+    </div>
+  </div>
+</section>
 
 
     <!--/w3l-project-->
@@ -649,6 +672,7 @@ function openGmail(event) {
 </body>
 
 </html>
+
 
 
 
